# clique-cover

./: .gitignore  compose.yml  start
algorithm-base/: Dockerfile  graph.rs
algorithm-base/solution-test/: Makefile  adj_list.c  adj_list.h  base64.c  base64.h  clique.c  clique.h  main.c  main.h
algorithm-base/wrapper/: Cargo.toml
algorithm-base/wrapper/src/: main.rs
algorithms/divset/: Dockerfile  divset.py
algorithms/foo1/: Dockerfile
algorithms/foo2/: Dockerfile
algorithms/grafsil/: Dockerfile  graf_sil.cpp
algorithms/greedy/: Dockerfile  greedy.py  modules.txt
algorithms/rga/: Dockerfile  RGA.py
graph-generation/: .dockerignore  Dockerfile  LICENSE  Makefile  pom.xml
graph-generation/src/main/java/pl/rogal/reggraphgen/: BetterFormat.java  Main.java  RestApi.java
graph-generation/src/main/java/pl/rogal/reggraphgen/exceptions/: GraphIsNotRegularException.java  GraphSelfCycleException.java  GraphTooLargeException.java  ImpossibleRegularGraphException.java
graph-generation/src/main/java/pl/rogal/reggraphgen/graphs/: AdjacencyMatrixGraph.java  EncodedGraph.java  EncodedRegularGraph.java  Graph.java  RegularGraphGenerators.java
graph-generation/src/main/java/pl/rogal/reggraphgen/utils/: Pair.java
graph-generation/src/main/resources/: logback.xml
public/: index.html  index.js  styles.css
server/: Cargo.toml  Dockerfile
server/src/: algonet.rs  grafnet.rs  main.rs  types.rs  website.rs
shared-rust/: Dockerfile
shared-rust/src/: lib.rs
