[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared-rust" }
bincode = "1.3"
bytes = "1.9"
dashmap = "6.1"
futures = "0.3"
futures-util = "0.3"
http = "1.2.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
hyper-tungstenite = "0.15"
mime_guess = "2.0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tokio-util = { version = "0.7.13", features = ["io"] }
tower-http = { version = "0.6.1", features = ["fs"] }
twox-hash = "2.0"
tungstenite = "0.24"
